Prepared to crowdin translation Reviewed extensible channels system
Signed-off-by: clinique <gael@lhopital.org>