@@ -12,18 +12,17 @@
  */
 package org.openhab.binding.netatmo.internal.api;
 
-import static org.openhab.binding.netatmo.internal.NetatmoBindingConstants.*;
+import static org.openhab.binding.netatmo.internal.NetatmoBindingConstants.BINDING_ID;
 import static org.openhab.binding.netatmo.internal.api.NetatmoConstants.*;
 
 import java.lang.reflect.Constructor;
-import java.lang.reflect.InvocationTargetException;
+import java.net.URI;
 import java.util.EnumSet;
 import java.util.LinkedList;
 import java.util.List;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
-import org.openhab.binding.netatmo.internal.NetatmoDescriptionProvider;
 import org.openhab.binding.netatmo.internal.api.NetatmoConstants.FeatureArea;
 import org.openhab.binding.netatmo.internal.api.dto.NAModule;
 import org.openhab.binding.netatmo.internal.api.dto.NARoom;
@@ -60,6 +59,7 @@ import org.openhab.binding.netatmo.internal.handler.MainHandler;
 import org.openhab.binding.netatmo.internal.handler.PersonHandler;
 import org.openhab.binding.netatmo.internal.handler.PresenceHandler;
 import org.openhab.binding.netatmo.internal.handler.RoomHandler;
+import org.openhab.binding.netatmo.internal.providers.NetatmoDescriptionProvider;
 import org.openhab.core.thing.Bridge;
 import org.openhab.core.thing.ThingTypeUID;
 
@@ -70,62 +70,61 @@ import org.openhab.core.thing.ThingTypeUID;
  */
 @NonNullByDefault
 public enum ModuleType {
-    UNKNOWN(null, RefreshPolicy.NONE, FeatureArea.NONE, null, List.of(), List.of(), null),
-    NAHome(HomeHandler.class, RefreshPolicy.CONFIG, FeatureArea.NONE, null, List.of(),
+    UNKNOWN(null, RefreshPolicy.NONE, FeatureArea.NONE, null, List.of(), null),
+    NAHome(HomeHandler.class, RefreshPolicy.CONFIG, FeatureArea.NONE, null,
             List.of(HomeSecurityChannelHelper.class, HomeEnergyChannelHelper.class), null),
 
     // Security Features
-    NAPerson(PersonHandler.class, RefreshPolicy.PARENT, FeatureArea.SECURITY, NAHome, List.of(),
+    NAPerson(PersonHandler.class, RefreshPolicy.PARENT, FeatureArea.SECURITY, NAHome,
             List.of(PersonChannelHelper.class), null),
-    NACamera(CameraHandler.class, RefreshPolicy.PARENT, FeatureArea.SECURITY, NAHome, List.of(),
+    NACamera(CameraHandler.class, RefreshPolicy.PARENT, FeatureArea.SECURITY, NAHome,
             List.of(CameraChannelHelper.class), NAWelcome.class),
-    NOC(PresenceHandler.class, RefreshPolicy.PARENT, FeatureArea.SECURITY, NAHome, List.of(),
+    NOC(PresenceHandler.class, RefreshPolicy.PARENT, FeatureArea.SECURITY, NAHome,
             List.of(CameraChannelHelper.class, PresenceChannelHelper.class), NAWelcome.class),
-    NDB(PresenceHandler.class, RefreshPolicy.PARENT, FeatureArea.SECURITY, NAHome, List.of(),
-            List.of(CameraChannelHelper.class), NAWelcome.class),
+    NDB(PresenceHandler.class, RefreshPolicy.PARENT, FeatureArea.SECURITY, NAHome, List.of(CameraChannelHelper.class),
+            NAWelcome.class),
 
     // Weather Features
-    NAMain(MainHandler.class, RefreshPolicy.AUTO, FeatureArea.WEATHER, null, List.of("measure", "measure-timestamp"),
+    NAMain(MainHandler.class, RefreshPolicy.AUTO, FeatureArea.WEATHER, null,
             List.of(PressureChannelHelper.class, NoiseChannelHelper.class, HumidityChannelHelper.class,
                     TemperatureChannelHelper.class, Co2ChannelHelper.class, TimestampChannelHelper.class,
                     MeasuresChannelHelper.class, SignalChannelHelper.class),
             NAThing.class),
     NAModule1(DeviceWithMeasureHandler.class, RefreshPolicy.PARENT, FeatureArea.WEATHER, NAMain,
-            List.of("measure", "measure-timestamp"),
             List.of(HumidityChannelHelper.class, TemperatureChannelHelper.class, BatteryChannelHelper.class,
                     MeasuresChannelHelper.class, TimestampChannelHelper.class, SignalChannelHelper.class),
             NAModule.class),
-    NAModule2(DeviceWithMeasureHandler.class, RefreshPolicy.PARENT, FeatureArea.WEATHER, NAMain, List.of(),
+    NAModule2(DeviceWithMeasureHandler.class, RefreshPolicy.PARENT, FeatureArea.WEATHER, NAMain,
             List.of(WindChannelHelper.class, BatteryChannelHelper.class, TimestampChannelHelper.class,
                     SignalChannelHelper.class),
             NAModule.class),
-    NAModule3(DeviceWithMeasureHandler.class, RefreshPolicy.PARENT, FeatureArea.WEATHER, NAMain, List.of("sum-rain"),
+    NAModule3(DeviceWithMeasureHandler.class, RefreshPolicy.PARENT, FeatureArea.WEATHER, NAMain,
             List.of(RainChannelHelper.class, BatteryChannelHelper.class, MeasuresChannelHelper.class,
                     TimestampChannelHelper.class, SignalChannelHelper.class),
             NAModule.class),
     NAModule4(DeviceWithMeasureHandler.class, RefreshPolicy.PARENT, FeatureArea.WEATHER, NAMain,
-            List.of("measure", "measure-timestamp"),
             List.of(HumidityChannelHelper.class, TemperatureChannelHelper.class, Co2ChannelHelper.class,
                     BatteryChannelHelper.class, MeasuresChannelHelper.class, TimestampChannelHelper.class,
                     SignalChannelHelper.class),
             NAModule.class),
 
     // Aircare Features
-    NHC(HomeCoachHandler.class, RefreshPolicy.AUTO, FeatureArea.AIR_CARE, null, List.of(),
+    NHC(HomeCoachHandler.class, RefreshPolicy.AUTO, FeatureArea.AIR_CARE, null,
             List.of(NoiseChannelHelper.class, HumidityChannelHelper.class, PressureChannelHelper.class,
                     TemperatureChannelHelper.class, Co2ChannelHelper.class, HomeCoachChannelHelper.class,
-                    TimestampChannelHelper.class, MeasuresChannelHelper.class, SignalChannelHelper.class),
+                    TimestampChannelHelper.class, MeasuresChannelHelper.class, SignalChannelHelper.class,
+                    MeasuresChannelHelper.class),
             NAThing.class),
 
     // Energy Features
-    NAPlug(DeviceHandler.class, RefreshPolicy.PARENT, FeatureArea.ENERGY, NAHome, List.of(),
-            List.of(SignalChannelHelper.class), NAModule.class),
-    NATherm1(DeviceHandler.class, RefreshPolicy.CONFIG, FeatureArea.ENERGY, NAHome, List.of(),
+    NAPlug(DeviceHandler.class, RefreshPolicy.PARENT, FeatureArea.ENERGY, NAHome, List.of(SignalChannelHelper.class),
+            NAModule.class),
+    NATherm1(DeviceHandler.class, RefreshPolicy.CONFIG, FeatureArea.ENERGY, NAHome,
             List.of(Therm1ChannelHelper.class, BatteryChannelHelper.class, SignalChannelHelper.class),
             NAThermostat.class),
-    NARoom(RoomHandler.class, RefreshPolicy.PARENT, FeatureArea.ENERGY, NAHome, List.of(),
+    NARoom(RoomHandler.class, RefreshPolicy.PARENT, FeatureArea.ENERGY, NAHome,
             List.of(RoomChannelHelper.class, RoomSetpointChannelHelper.class), NARoom.class),
-    NRV(DeviceHandler.class, RefreshPolicy.CONFIG, FeatureArea.ENERGY, NAHome, List.of(),
+    NRV(DeviceHandler.class, RefreshPolicy.CONFIG, FeatureArea.ENERGY, NAHome,
             List.of(BatteryChannelHelper.class, SignalChannelHelper.class), NAModule.class),
 
     // Left for future implementation
@@ -143,102 +142,70 @@ public enum ModuleType {
 
     public static final EnumSet<ModuleType> asSet = EnumSet.allOf(ModuleType.class);
 
-    private final List<String> groups;
-    private final List<String> extensions;
-    private final List<Class<? extends AbstractChannelHelper>> channelHelpers;
-    private final @Nullable ModuleType bridgeType;
-    private final @Nullable Class<?> handlerClass;
-    private final @Nullable Class<?> dto;
-    private final ThingTypeUID thingTypeUID = new ThingTypeUID(BINDING_ID, name());
-    private final RefreshPolicy refreshPeriod;
-    private final FeatureArea features;
+    public final List<String> groups = new LinkedList<>();
+    public final List<String> extensions = new LinkedList<>();
+    public final List<Class<? extends AbstractChannelHelper>> channelHelpers;
+    public final @Nullable ModuleType bridgeType;
+    public final @Nullable Class<?> handlerClass;
+    public final @Nullable Class<?> dto;
+    public final ThingTypeUID thingTypeUID = new ThingTypeUID(BINDING_ID, name());
+    public final RefreshPolicy refreshPeriod;
+    public final FeatureArea features;
 
     ModuleType(@Nullable Class<?> handlerClass, RefreshPolicy refreshPeriod, FeatureArea features,
-            @Nullable ModuleType bridge, List<String> extensions,
-            List<Class<? extends AbstractChannelHelper>> setOfHelpers, @Nullable Class<?> dto) {
+            @Nullable ModuleType bridge, List<Class<? extends AbstractChannelHelper>> setOfHelpers,
+            @Nullable Class<?> dto) {
         this.handlerClass = handlerClass;
         this.refreshPeriod = refreshPeriod;
-        this.extensions = extensions;
         this.channelHelpers = setOfHelpers;
         this.bridgeType = bridge;
         this.dto = dto;
         this.features = features;
-        List<String> groupsFromHelpers = new LinkedList<>();
-        setOfHelpers.forEach(helperClass -> {
-            try {
-                Constructor<? extends AbstractChannelHelper> constructor = helperClass.getConstructor();
-                AbstractChannelHelper helper = constructor.newInstance();
-                groupsFromHelpers.addAll(helper.getChannelGroups());
-            } catch (NoSuchMethodException | SecurityException | InstantiationException | IllegalAccessException
-                    | IllegalArgumentException | InvocationTargetException e) {
-                throw new IllegalArgumentException(e);
+
+        try {
+            for (Class<? extends AbstractChannelHelper> helperClass : setOfHelpers) {
+                AbstractChannelHelper helper = helperClass.getConstructor().newInstance();
+                groups.addAll(helper.getChannelGroups());
+                extensions.addAll(helper.getMeasureChannels());
             }
-        });
-        this.groups = groupsFromHelpers;
+        } catch (RuntimeException | ReflectiveOperationException e) {
+            throw new IllegalArgumentException(e);
+        }
     }
 
     public boolean matches(ThingTypeUID otherThingTypeUID) {
         return thingTypeUID.equals(otherThingTypeUID);
     }
 
-    public boolean isPhysicalEquipment() {
-        return groups.contains(GROUP_SIGNAL);
+    public boolean isLogical() {
+        return !channelHelpers.contains(SignalChannelHelper.class);
     }
 
     public int[] getSignalLevels() {
-        if (!isPhysicalEquipment()) {
-            throw new IllegalArgumentException(
-                    "This should not be called for module type : " + name() + ", file a bug.");
+        if (!isLogical()) {
+            return channelHelpers.contains(BatteryChannelHelper.class) ? RADIO_SIGNAL_LEVELS : WIFI_SIGNAL_LEVELS;
         }
-        return groups.contains(GROUP_BATTERY) ? RADIO_SIGNAL_LEVELS : WIFI_SIGNAL_LEVELS;
+        throw new IllegalArgumentException("This should not be called for module type : " + name() + ", file a bug.");
     }
 
-    public List<String> getGroups() {
-        return groups;
+    public ModuleType getBridge() {
+        return bridgeType != null ? bridgeType : ModuleType.UNKNOWN;
     }
 
-    public List<String> getExtensions() {
-        return extensions;
+    public @Nullable ThingTypeUID getBridgeUID() {
+        return getBridge().thingTypeUID;
     }
 
-    public RefreshPolicy getRefreshPeriod() {
-        return refreshPeriod;
+    public Constructor<?> getHandlerConstructor() throws NoSuchMethodException, SecurityException {
+        if (handlerClass != null) {
+            return handlerClass.getConstructor(Bridge.class, List.class, ApiBridge.class,
+                    NetatmoDescriptionProvider.class);
+        }
+        throw new IllegalArgumentException("This should not be called for module type : " + name() + ", file a bug.");
     }
 
-    public @Nullable ThingTypeUID getBridgeThingType() {
-        ModuleType localBridge = bridgeType;
-        return localBridge == null || localBridge == ModuleType.UNKNOWN ? null : localBridge.thingTypeUID;
-    }
-
-    public ModuleType getBridgeType() {
-        ModuleType localBridge = bridgeType;
-        return localBridge == null ? ModuleType.UNKNOWN : localBridge;
-    }
-
-    public @Nullable Constructor<?> getHandlerConstructor() throws NoSuchMethodException, SecurityException {
-        return handlerClass != null
-                ? handlerClass.getConstructor(Bridge.class, List.class, ApiBridge.class,
-                        NetatmoDescriptionProvider.class)
-                : null;
-    }
-
-    public List<Class<? extends AbstractChannelHelper>> getChannelHelpers() {
-        return channelHelpers;
-    }
-
-    public @Nullable Class<?> getDto() {
-        return dto;
-    }
-
-    public ThingTypeUID getThingTypeUID() {
-        return thingTypeUID;
-    }
-
-    public static boolean isModuleTypeImplemented(String name) {
-        return asSet.stream().anyMatch(mt -> mt.toString().equals(name));
-    }
-
-    public FeatureArea getFeatures() {
-        return features;
+    public URI getConfigDescription() {
+        return URI.create(BINDING_ID + ":"
+                + (isLogical() ? "virtual" : refreshPeriod == RefreshPolicy.CONFIG ? "configurable" : "device"));
     }
 }
